Basic definition of package

--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,10 @@ uuid = "a616c969-b715-4a75-bd32-35bac0eb512b"
 authors = ["Andrew J. Radcliffe <andrewjradcliffe@gmail.com>"]
 version = "0.1.0"
 
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+
 [compat]
 julia = "1"
 
